--- a/01-ansible-check/check-nodes.yaml
+++ b/01-ansible-check/check-nodes.yaml
@@ -1,11 +1,12 @@
 ---
 - hosts: mesos
-  remote_user: root
+  become: true
+  become_user: root
   tasks:
   - name: test connection
     ping:
 - hosts: local
   tasks:
-  - uri: url=http://m1.dcos/mesos/roles
+  - uri: url=http://m1.dcos/mesos/state
     register: result
   - debug: var=result
